package io.github.tt432.eyelib.client.render;

import com.mojang.blaze3d.vertex.PoseStack;
import io.github.tt432.eyelib.client.manager.ModelManager;
import io.github.tt432.eyelib.client.model.DFSModel;
import io.github.tt432.eyelib.client.model.Model;
import io.github.tt432.eyelib.client.model.ModelRuntimeData;
import io.github.tt432.eyelib.client.model.bake.TwoSideModelBakeInfo;
import io.github.tt432.eyelib.client.render.visitor.BuiltInBrModelRenderVisitors;
import io.github.tt432.eyelib.client.render.visitor.ModelVisitContext;
import io.github.tt432.eyelib.event.ManagerEntryChangedEvent;
import lombok.Getter;
import net.minecraftforge.common.MinecraftForge;
import org.jetbrains.annotations.Nullable;
import org.joml.Matrix3f;
import org.joml.Matrix4f;

import javax.annotation.ParametersAreNonnullByDefault;
import java.util.HashMap;
import java.util.Map;

/**
 * @author TT432
 */
@ParametersAreNonnullByDefault
public class RenderHelper {
    @Getter
    private final ModelVisitContext context = new ModelVisitContext();
    @Nullable
    private RenderParams params;

    public static RenderHelper start() {
        return new RenderHelper();
    }

    @SuppressWarnings("unchecked")
    private static <T> T cast(Object o) {
        return (T) o;
    }

    private static final Map<String, DFSModel> dfsModels = new HashMap<>();

    public DFSModel dfsModel(Model model) {
        return dfsModels.computeIfAbsent(model.name(), m -> DFSModel.create(model));
    }

    public RenderHelper params(RenderParams params) {
        this.params = params;
        return this;
    }

    {
        MinecraftForge.EVENT_BUS.<ManagerEntryChangedEvent>addListener(e -> {
            if (e.getManagerName().equals(ModelManager.class.getSimpleName()))
                dfsModels.remove(e.getEntryName());
        });
    }

    public RenderHelper render(RenderParams params, Model model, ModelRuntimeData infos) {
        this.params = params;
        if (params.texture() != null) {
            context.put("BackedModel", TwoSideModelBakeInfo.INSTANCE.getBakedModel(model, params.isSolid(), params.texture()));
        }

        dfsModel(model).visit(params, context, BuiltInBrModelRenderVisitors.HIGH_SPEED_RENDER, infos, new DFSModel.StateMachine());

        return this;
    }

    public RenderHelper collectLocators(Model model, ModelRuntimeData infos) {
        if (params != null)
            dfsModel(model).visit(params, context, BuiltInBrModelRenderVisitors.COLLECT_LOCATOR, cast(infos), new DFSModel.StateMachine());
        return this;
    }

    public RenderHelper renderOnLocator(RenderParams params, String visitorName, Model model, ModelRuntimeData infos) {
        if (context.contains("locators")) {
            renderOnLocator(visitorName, model, infos, params);
        }

        return this;
    }

    public RenderHelper renderOnLocator(String visitorName, Model model, ModelRuntimeData infos) {
        if (params != null && context.contains("locators")) {
            renderOnLocator(visitorName, model, infos, params);
        }

        return this;
    }

    private void renderOnLocator(String visitorName, Model model, ModelRuntimeData infos, RenderParams params) {
        Map<String, Matrix4f> locators = context.get("locators");
        if (locators == null) {
            return;
        }

        locators.forEach((name, matrix) -> {
            if (name.split("_t_")[0].equals(visitorName)) {
                PoseStack poseStack = new PoseStack();
                poseStack.poseStack.addLast(new PoseStack.Pose(new Matrix4f(matrix), new Matrix3f(matrix)));
                render(params.withPoseStack(poseStack), model, infos);
            }
        });
    }
}
